--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>La Panthère entreprise web design Lyon</title>
 
     
 <!-- Analytics -->
@@ -52,7 +52,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="contact.html">contact</a>
 					</li>
 				</ul>
 			</div>
