--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence la panthere avec le texte agence web design" height="40" width="217"/></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -50,8 +48,6 @@
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
-					</li>
-					<li>
 					</li>
 					<li>
 						<a href="contact.html">Contact</a>
@@ -68,9 +64,11 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
+				<img src="img/logo.png" class="center-block image-resize-mode"
+				width="100" height="100" alt="Logo agence la panthere" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Agence La Panthère
+					Agence La Panthère, <br>
+					spécialiste du web-design à Lyon
 				</h1>
 				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -86,7 +84,12 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<h2 class="bloc__title-h2">
+					L'agence La Panthère est une 
+					<strong>agence de web design</strong> 
+					qui aide les entreprises à devenir
+					attractives et visibles sur internet.
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -126,8 +129,13 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+				<p class="citation">
+					<span>"L'agence La Panthère est une excellente agence web !
+					Les web designers ont réussi à capturer l'essence de
+					notre entreprise et à l'intégrer à notre site. 
+					Cela nous a aidé à doubler nos ventes en ligne à Lyon."</span> <br>
+					Maxime Guibard, PDG de À vos fourchettes
+				</p>
 			</div>
 		</div>
 	</div>
