--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Vous avez un site web
-	qui a besoin d'une nouvelle identité visuelle ou que vous partiez de zéro,
-	laissez l'agence web design la panthère située à Lyon vous réaliser un design
-	 dont vous serez fier et qui représentera votre entreprise">
+	<meta name="description" content="Obtenez des conseils en webdesign, stratégie web et illustration ! Nous 
+	aidons les entreprises à se développer et à attirer de nouveaux clients sur la toile. Découvrez nos services de 
+	création de site internet, stratégie digitale, webdesign...">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
