--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-							<img src="img/1.jpg" loading="lazy"
+							<img src="img/1.webp" loading="lazy"
 								alt="image de la refonte d'un site web journal  avec des journaux"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
@@ -199,7 +199,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-							<img src="img/2.jpg" loading="lazy" class="img-responsive portfolio-thumb"
+							<img src="img/2.webp" loading="lazy" class="img-responsive portfolio-thumb"
 								alt="image de la création d'un site web pour photographes avec une photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
