--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
 							<img src="img/1.webp" loading="lazy"
 								alt="image de la refonte d'un site web journal  avec des journaux"
@@ -197,7 +197,7 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
 							<img src="img/2.webp" loading="lazy" class="img-responsive portfolio-thumb"
 								alt="image de la création d'un site web pour photographes avec une photographes" /></a>
@@ -211,9 +211,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-							<img src="img/3.bmp" loading="lazy" class="img-responsive portfolio-thumb"
+							<img src="img/3.webp" loading="lazy" class="img-responsive portfolio-thumb"
 								alt="image de la création d'un site web pour voyageur avec du matériel pour filmer" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -224,9 +224,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-							<img src="img/4.bmp" loading="lazy" class="img-responsive portfolio-thumb"
+							<img src="img/4.webp" loading="lazy" class="img-responsive portfolio-thumb"
 								alt="images de la création d'un site web pour agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
